# aplplot

./: INSTALL  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  plotsincos
images/: log.eps  product.ps
src/: Makefile.am  Makefile.in  aplplot.cc  aplplot.hh  aplplot_menu.c  aplplot_menu.h  colours.cc  colours.hh  modes.m4  parser.cc  parser.hh
video/: README  animate.c  animate.pl  animate.sh  mkvid  sine.avi  sine.mkv
workspaces/: Makefile  Makefile.am  Makefile.in  Performance.apl  Performance.gnuplot  plotinit.xml  plotsincos.xml
